--- a/OO02/nbproject/private/private.properties
+++ b/OO02/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\17\\AppData\\Roaming\\NetBeans\\8.1\\build.properties
+user.properties.file=C:\\Users\\Win7\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
